# ubackup

./: Makefile.am  README.en.md  README.md  configure.ac  ubackup.json  ubackup.spec
cui/: Makefile.am  main.cpp
dracut-module/: module-setup.sh
grub2/: 50_ubackup  ubackup_restore  ubackuplib.sh  urestore.sh
lib/: Makefile.am  configuration.cpp  configuration.h  interface.cpp  ubackup.h
lib/internal/: Makefile.am  SystemCmd.cpp  SystemCmd.h  interface_adaptor.h  restic.cpp  restic.h  rsync.cpp  rsync.h
lib/utils/: Makefile.am  getopts.cpp  getopts.h  globalOption.cpp  globalOption.h  options.cpp  options.h  util.cpp  util.h
service/: ubackup-restore.service
